--- a/ClashRules.ini
+++ b/ClashRules.ini
@@ -29,7 +29,7 @@ ruleset=🎮 游戏平台,https://raw.githubusercontent.com/Liameternal/ClashRul
 ruleset=📹 油管视频,https://raw.githubusercontent.com/Liameternal/ClashRules/master/YouTube.list
 ruleset=🎥 奈飞视频,https://raw.githubusercontent.com/Liameternal/ClashRules/master/Netflix.list
 ruleset=📺 国内媒体海外版,https://raw.githubusercontent.com/Liameternal/ClashRules/master/ChinaMediaOutBoard.list
-ruleset=🌏 国内媒体,https://raw.githubusercontent.com/Liameternal/ClashRules/master/ChinaMedia.list
+ruleset=🌍 国内媒体,https://raw.githubusercontent.com/Liameternal/ClashRules/master/ChinaMedia.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/Liameternal/ClashRules/master/ProxyMedia.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/Liameternal/ClashRules/master/ProxyGFWlist.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/Liameternal/ClashRules/master/ChinaIp.list
