--- a/ClashRules.ini
+++ b/ClashRules.ini
@@ -12,7 +12,7 @@
 ;设置规则标志位
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/Liameternal/ClashRules/master/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/Liameternal/ClashRules/master/UnBan.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/Liameternal/ClashRules/master/DiyDirect
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/Liameternal/ClashRules/master/DiyDirect.list
 ruleset=📺 Termious,https://raw.githubusercontent.com/Liameternal/ClashRules/master/Emby.list
 ruleset=☁️ AdobeCloud,https://raw.githubusercontent.com/Liameternal/ClashRules/master/AdobeCloud.list
 ruleset=🌸 樱花动漫,https://raw.githubusercontent.com/Liameternal/ClashRules/master/YingHuaAnime.list
