--- a/ClashRules.ini
+++ b/ClashRules.ini
@@ -16,6 +16,7 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/Liameternal/ClashRul
 ruleset=📺 Termious,https://raw.githubusercontent.com/Liameternal/ClashRules/master/Emby.list
 ruleset=☁️ AdobeCloud,https://raw.githubusercontent.com/Liameternal/ClashRules/master/AdobeCloud.list
 ruleset=🌸 樱花动漫,https://raw.githubusercontent.com/Liameternal/ClashRules/master/YingHuaAnime.list
+ruleset=🤖 OpenAI,https://raw.githubusercontent.com/Liameternal/ClashRules/master/OpenAI.list
 ruleset=🛑 广告拦截,https://raw.githubusercontent.com/Liameternal/ClashRules/master/BanAD.list
 ruleset=🍃 应用净化,https://raw.githubusercontent.com/Liameternal/ClashRules/master/BanProgramAD.list
 ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/Liameternal/ClashRules/master/GoogleFCM.list
@@ -48,6 +49,7 @@ custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/genera
 custom_proxy_group=📺 Termious`select`[]DIRECT`[]REJECT`.*
 custom_proxy_group=☁️ AdobeCloud`select`[]DIRECT`[]REJECT`.*
 custom_proxy_group=🌸 樱花动漫`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
+custom_proxy_group=🤖 OpenAI`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🎥 奈飞视频`select`[]🎥 奈飞节点`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
